# youtube_video_summarization

./: CHATBOT_IDEA.md  CLAUDE.md  COMMANDS.md  MEDIUM_IDEA.md  MEETING_INTELLIGENCE_IDEA.md  PRODUCT_RESEARCH.md  README.md  START_WEB.md  WEB_UI_PLAN.md  categories.json  example_env  get_latest_video.py  get_videos_links_by_channel.py  main.py  pyproject.toml  restart_bot.sh  scheduler.py  script.py  services.py  setup.sh  summarize.py  telegram_bot.py  transcribe.py  web_app.py
app/db/: __init__.py  collections.py  core.py  history.py  subscriptions.py  users.py
app/interfaces/: bot.py  cli.py  web.py
app/knowledge/: builder.py  qa.py  quiz.py
app/pipeline/: downloader.py  extractor.py  summarizer.py  transcriber.py
app/utils/: notifications.py  youtube.py
static/: style.css
templates/: about.html  allowed_users.html  base.html  collection_detail.html  collections.html  index.html  job.html  login.html  processing.html  subscriptions.html  summaries.html  summary_detail.html
templates/partials/: active_jobs.html  job_row.html  qa_response.html  suggestions.html
tests/: test_pipeline.py
