[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Download, transcribe, and summarize YouTube videos (Hindi/English → English)"
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper>=0.4.3",
    "ollama>=0.6.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
yt-summarize = "main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "main.py",
    "script.py",
    "get_latest_video.py",
    "transcribe.py",
    "summarize.py",
    "scheduler.py",
]

[dependency-groups]
dev = []
